[package]
name = "Morphius-tt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["default"] }
scraper = "0.20"
